Put the application classloader's classpath entries in their proper place
The java.class.path entries were appended after every classloader had
been visited, which put them after the entries of the classloaders that
delegate to the application classloader. That inverts the masking order:
a class present both on the application classpath and in a child
classloader was reported from the child, whereas parent-first delegation
makes the JVM load the application classloader's copy.

The entries are now contributed by JPMSClassLoaderHandler, which is the
handler for the application classloader, so they land at the position
the application classloader takes in the delegation order, like any
other classloader's entries. The handler reads the classloader's
URLClassPath when it can, and falls back to the java.class.path system
property when it cannot, since that property lists the entries the
URLClassPath was built from.

This also makes ignoreParentClassLoaders() behave as its documentation
says: it now leaves out only the entries that a parent classloader
declares, instead of also dropping the application classloader's own
entries when the application classloader is itself one of the
classloaders being searched.

RecordTest relied on the old order: it scanned a jarfile through a child
of the application classloader without restricting the accepted
packages, and took the first record found, which is now a record on the
application classpath rather than the one in the jarfile. It now accepts
only the jarfile's package, and names the record it expects.